# entity-recognition

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build_and_test_ci.yaml  pre_commit_hooks.yaml  publish_ci.yaml  python-ci.yaml  release_ci.yaml  setup_and_test.yaml
entity_recognition_service/: __init__.py  entity_recognition.py  models.py  utils.py
entity_recognition_service/functions/: entity_extraction.py  recommendation_generation.py
entity_recognition_service/methods/: recommendation_generation.py
examples/: EXAMPLES.md
examples/advanced_features/: analyze_and_visualize_results.py  process_and_visualize.py
examples/basic_usage/: detailed_entity_recognition.py  process_and_visualize.py
examples/integration_samples/: flask_integration.py  streamlit_integration.py
requirements/: dev.txt
src/: config.py  main.py
src/entity_recognition_lib/: EntityRecognizer.py  __init__.py  models.py  utils.py
src/entity_recognition_lib/data/: tech_entities.json
src/entity_recognition_lib/functions/: entity_extraction.py  recommendation_generation.py
src/entity_recognition_service/: EntityRecognizer.py  utils.py
src/entity_recognition_service/functions/: entity_extraction.py
src/nlp/: entity_recognition.py  router.py  schemas.py  utils.py
src/nlp/services/: entity_extraction.py  recommendation_generation.py
tests/: conftest.py  test_entity_extraction.py  test_recommendation_generation.py
