[tool.poetry]
name = "entity-recognition-service"
version = "0.1.20"
description = "A library for technology entity recognition and recommendation"
authors = ["Cesar Goncalves <goncalves.cesaraugusto94@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
bertopic = "0.16.1"
spacy = "^3.0.0"
transformers = "^4.0.0"
torch = "^1.0.0"
scikit-learn = "^1.0.0"
scipy = "^1.0.0"
pandas = "^1.0.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 160
lint.select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle
    "W",    # Pycodestyle warnings
    "I001", # isort
]
lint.ignore = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {}
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.lint.mccabe]
max-complexity = 10
